--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,17 @@ services:
   db:
     image: postgres
     environment:
-      - POSTGRES_DB="${POSTGRES_DB}"
-      - POSTGRES_USER="${POSTGRES_USER}"
-      - POSTGRES_PASSWORD="${POSTGRES_PASSWORD}"
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
   web:
     image: "${DJANGO_PROJECT_NAME}_django"
     build: .
+    env_file:
+      - .env_template
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-    - .${DJANGO_PROJECT_NAME}:/usr/src/${DJANGO_PROJECT_NAME}
+    - .:/usr/src/${DJANGO_PROJECT_NAME}
     ports:
     - "8000:8000"
     depends_on:
